[gd_scene load_steps=8 format=3 uid="uid://drfgx6m85kgqk"]

[ext_resource type="Script" uid="uid://erq7mrovjiiy" path="res://scripts/door.gd" id="1_sffwt"]
[ext_resource type="PackedScene" uid="uid://ctov8fto5d1e2" path="res://scences/3d_model/door_2.tscn" id="2_k3upi"]

[sub_resource type="Animation" id="Animation_bivwj"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door2_Room3")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.9999999, 0, -7.5497866e-08)

[sub_resource type="Animation" id="Animation_7fyo1"]
resource_name = "close_door"
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door2_Room3")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.7071064, 0, 0.70710677, 0.033333335, 1, 0, 0.708626, 0, 0.705584, 0.06666667, 1, 0, 0.71314836, 0, 0.7010129, 0.1, 1, 0, 0.7205657, 0, 0.69338644, 0.13333334, 1, 0, 0.7307011, 0, 0.68269724, 0.16666667, 1, 0, 0.74331295, 0, 0.66894346, 0.2, 1, 0, 0.7581012, 0, 0.65213656, 0.23333333, 1, 0, 0.7747151, 0, 0.6323101, 0.26666668, 1, 0, 0.7927637, 0, 0.60952884, 0.3, 1, 0, 0.8118268, 0, 0.58389795, 0.33333334, 1, 0, 0.8314693, 0, 0.5555703, 0.36666667, 1, 0, 0.8512547, 0, 0.52475244, 0.4, 1, 0, 0.8707601, 0, 0.4917078, 0.43333334, 1, 0, 0.88959146, 0, 0.4567567, 0.46666667, 1, 0, 0.907397, 0, 0.4202742, 0.5, 1, 0, 0.92387927, 0, 0.38268358, 0.53333336, 1, 0, 0.9388051, 0, 0.34444824, 0.56666666, 1, 0, 0.9520117, 0, 0.30606076, 0.6, 1, 0, 0.9634101, 0, 0.26803085, 0.6333333, 1, 0, 0.9729838, 0, 0.23087232, 0.6666667, 1, 0, 0.98078495, 0, 0.19509046, 0.7, 1, 0, 0.98692626, 0, 0.16117044, 0.73333335, 1, 0, 0.99157023, 0, 0.12956691, 0.76666665, 1, 0, 0.9949168, 0, 0.10069598, 0.8, 1, 0, 0.99718845, 0, 0.074928634, 0.8333333, 1, 0, 0.9986158, 0, 0.052587565, 0.8666667, 1, 0, 0.9994232, 0, 0.033944182, 0.9, 1, 0, 0.99981475, 0, 0.019218985, 0.93333334, 1, 0, 0.99996257, 0, 0.0085813925, 0.96666664, 1, 0, 0.99999714, 0, 0.0021513503, 1, 1, 0, 0.9999999, 0, 4.3711367e-08)

[sub_resource type="Animation" id="Animation_bsgny"]
resource_name = "open_door"
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door2_Room3")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.9999999, 0, -7.5497866e-08, 0.033333335, 1, 0, 0.9999976, 0, 0.00215117, 0.06666667, 1, 0, 0.99996305, 0, 0.00858124, 0.1, 1, 0, 0.9998152, 0, 0.019218806, 0.13333334, 1, 0, 0.9994236, 0, 0.03394403, 0.16666667, 1, 0, 0.9986162, 0, 0.052587364, 0.2, 1, 0, 0.9971888, 0, 0.07492851, 0.23333333, 1, 0, 0.99491715, 0, 0.10069578, 0.26666668, 1, 0, 0.9915706, 0, 0.12956679, 0.3, 1, 0, 0.9869265, 0, 0.16117027, 0.33333334, 1, 0, 0.9807852, 0, 0.19509026, 0.36666667, 1, 0, 0.9729841, 0, 0.23087214, 0.4, 1, 0, 0.9634103, 0, 0.2680307, 0.43333334, 1, 0, 0.95201194, 0, 0.3060606, 0.46666667, 1, 0, 0.9388052, 0, 0.34444803, 0.5, 1, 0, 0.9238794, 0, 0.38268337, 0.53333336, 1, 0, 0.90739703, 0, 0.42027405, 0.56666666, 1, 0, 0.8895916, 0, 0.4567566, 0.6, 1, 0, 0.8707601, 0, 0.49170765, 0.6333333, 1, 0, 0.8512547, 0, 0.5247523, 0.6666667, 1, 0, 0.83146936, 0, 0.5555702, 0.7, 1, 0, 0.8118268, 0, 0.5838978, 0.73333335, 1, 0, 0.7927636, 0, 0.6095287, 0.76666665, 1, 0, 0.77471507, 0, 0.6323099, 0.8, 1, 0, 0.7581011, 0, 0.6521365, 0.8333333, 1, 0, 0.7433129, 0, 0.66894335, 0.8666667, 1, 0, 0.730701, 0, 0.6826971, 0.9, 1, 0, 0.7205655, 0, 0.69338626, 0.93333334, 1, 0, 0.7131482, 0, 0.70101273, 0.96666664, 1, 0, 0.70862585, 0, 0.7055839, 1, 1, 0, 0.7071064, 0, 0.70710677)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7fyo1"]
_data = {
&"RESET": SubResource("Animation_bivwj"),
&"close_door": SubResource("Animation_7fyo1"),
&"open_door": SubResource("Animation_bsgny")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sffwt"]
height = 21.97998
radius = 15.850586

[node name="Door2" type="Node3D"]
script = ExtResource("1_sffwt")
open_animation = "open_door"
close_animation = "close_door"

[node name="Door2_Room3" parent="." instance=ExtResource("2_k3upi")]
transform = Transform3D(-0.99999946, 0, -1.5099572e-07, 0, 1, 0, 1.5099572e-07, 0, -0.99999946, 0, 0, 0)

[node name="DoorAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7fyo1")
}

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.98999, 0)
shape = SubResource("CylinderShape3D_sffwt")

[node name="OpenSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.8, 10, 0)

[node name="CloseSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.8, 10, 0)

[connection signal="animation_finished" from="DoorAnimation" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_Area_body_exited"]
